fixing gap between links on mobile version

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -63,7 +63,7 @@
 .subLinks {
   display: flex;
   justify-content: flex-start;
-  gap: 2rem;
+  gap: 0.5rem;
   font-weight: 400;
  
 }
@@ -147,6 +147,25 @@
     text-align: left;
   }
 
+  .mainLinks {
+    flex-direction: column;
+    gap: 0; 
+  }
+
+  .mainLinks a:nth-child(1),
+  .mainLinks a:nth-child(2) {
+    margin-bottom: 0.5rem;
+  }
+
+  .mainLinks a:nth-child(3) {
+    margin-bottom: 4rem; 
+  }
+
+  .mainLinks a:nth-child(4),
+  .mainLinks a:nth-child(5) {
+    margin-bottom: 0.5rem;
+  }
+
   .contact,
   .social {
     align-items: flex-start;
@@ -155,27 +174,5 @@
 
   .social {
     justify-content: flex-start;
-  }
-}
-
-@media (max-width: 768px) and (min-width: 601px) {
-  .mainLinks,
-  .subLinks {
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    gap: 2rem;
-    width: 100%;
-  }
-
-  .navSection {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-
-  .logoTitle {
-    align-items: flex-start;
   }
 }
